# roombapy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.ci/: mosquitto.passwd
.github/workflows/: ci.yaml  release.yaml
.github/workflows/mosquitto/: mosquitto.conf
roombapy/: __init__.py  cli.py  const.py  discovery.py  entry_points.py  getpassword.py  remote_client.py  roomba.py  roomba_factory.py  roomba_info.py
tests/: abstract_test_roomba.py  conftest.py  test_decode.py  test_discovery.py  test_payload.py  test_roomba.py  test_roomba_integration.py
tests/unit/: discovery.py
